k8s-deployment/api-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-proxy
  labels:
    service: api-proxy
spec:
  selector:
    service: api-proxy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
