k8s-deployment/api-proxy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: udagram-api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    service: udagram-api-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: api-proxy
              servicePort: 8080
